Remove padding-top

--- a/css/main.css
+++ b/css/main.css
@@ -213,7 +213,7 @@ p {
 @media screen and (max-width: 485px) {
   h1 {
     font-size: 2em;
-    padding-top: 20px;
+    padding: 20px 0 0 0;
   }
 
   h2 {
